GG-38440 Add required module export sun.security.ssl for Java 17 in our jvmdefaults scripts